<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sistemas.imc1.Acercade">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="49dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tel: 31111111111"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="74dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView3"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="103dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView4" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="salir"
        android:text="@string/button9"
        tools:layout_editor_absoluteX="278dp"
        tools:layout_editor_absoluteY="431dp" />

</LinearLayout>
